# finance-dashboard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: build-windows.yml
docs/: VERSIONING.md  reference-index.md  reference-map.md  template-items-module.md  transplant-playbook.md
docs/images/: README.md
reference/finance-dashboard-src/api/: seeder.ts
reference/finance-dashboard-src/components/: AccountModal.tsx  CategoryManager.tsx  CsvImportModal.tsx  InstallmentModal.tsx  TransactionEditModal.tsx
scripts/: rename-template.ps1
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs
src-tauri/src/commands/: items.rs  mod.rs  settings.rs  system.rs
src-tauri/src/repositories/: items.rs  mod.rs  settings.rs
src/api/: ai.ts  browserPreview.ts  client.ts  db.ts  seeder.ts  types.ts
src/components/: CsvImportModal.tsx  InstallmentModal.tsx  ItemModal.tsx  Sidebar.tsx  TransactionEditModal.tsx
src/components/csv/: parser.ts
src/hooks/: useAccounts.ts  useCategories.ts  useInstallments.ts  useTransactions.ts
src/pages/: Accounts.tsx  Analytics.tsx  Dashboard.tsx  Items.tsx  Overview.tsx  References.tsx  Settings.tsx  Transactions.tsx
src/store/: runtime.ts  useAppShellStore.ts  useStore.ts  useTemplateItemsStore.ts
src/utils/: datetime.ts  download.ts  errors.ts  preferences.ts  snapshot.ts
tests/e2e/: template-smoke.spec.ts
(+21 files in other folders)
